apps/konomitv/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/starrybluesky/konomitv-hwaccel
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              readOnly: true
              subPath: config.yaml
            - name: data
              mountPath: /app/server/data
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: config
          configMap:
            name: app-config
        - name: data
          hostPath:
            path: /opt/k8s-volumes/konomitv/data
            type: DirectoryOrCreate
        - name: dev-dri
          hostPath:
            path: /dev/dri
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
