apps/konomitv/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default

  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
