apps/konomitv/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`konomitv.starry.blue`)
      services:
        - name: service
          port: 7000
